# EQVita

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c
app/debug_screen/: debugScreen.c
app/sce_sys/livearea/contents/: template.xml
common/: CMakeLists.txt  eq_shared.h
docs/: audio-crackle-fix.md  how-to-build.md  requirements.md
plugin/: CMakeLists.txt  dsp.c  dsp.h  exports.yml  main.c
